// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests produce and consume 1`] = `
Object {
  "body": Object {
    "data": "foo",
  },
  "headers": Object {
    "Content-Length": "14",
    "Content-Type": "application/json",
    "Host": "target:8080",
    "User-Agent": "Java-http-client/13-ea",
    "x-record-offset": Any<String>,
    "x-record-original-topic": "foo",
    "x-record-partition": "3",
    "x-record-timestamp": Any<String>,
    "x-record-topic": "foo",
  },
  "method": "POST",
  "url": "/consume",
}
`;

exports[`tests produce with headers 1`] = `
Object {
  "body": Object {
    "data": "foo",
  },
  "headers": Object {
    "Content-Length": "14",
    "Content-Type": "application/json",
    "Host": "target:8080",
    "User-Agent": "Java-http-client/13-ea",
    "ce_id": "uuid",
    "ce_source": "source",
    "ce_specversion": "1.0",
    "ce_time": "1234",
    "x-b3-flags": "1",
    "x-b3-parentspanid": "101112",
    "x-b3-sampled": "1",
    "x-b3-spanid": "789",
    "x-b3-traceid": "456",
    "x-ot-span-context": "foo",
    "x-record-offset": Any<String>,
    "x-record-original-topic": "foo",
    "x-record-partition": "3",
    "x-record-timestamp": Any<String>,
    "x-record-topic": "foo",
    "x-request-id": "123",
  },
  "method": "POST",
  "url": "/consume",
}
`;
